--- a/src/main/resources/templates/inicioAdmin.html
+++ b/src/main/resources/templates/inicioAdmin.html
@@ -46,14 +46,19 @@
     <div class="col-sm-8">
         <br>
         <br>
-            <form th:action="@{/expediente}">
-                <button class="btn btn-primary"><i class="fa fa-folder-open-o" aria-hidden="true"></i>  INGRESAR A EXPEDIENTE DE ALUMNO</button>
-            </form>
-            <br>
-            <br>
-            <form th:action="@{/materias}">
-                <button class="btn btn-primary"><i class="fa fa-book" aria-hidden="true"></i>  INFORMACI&Oacute;N DE MATERIAS CURSADAS</button>
-            </form>
+        <form th:action="@{/expediente}">
+            <button class="btn btn-primary">Cat&aacute;logo de materias</button>
+        </form>
+        <br>
+        <br>
+        <form th:action="@{/materias}">
+            <button class="btn btn-primary">Cat&aacute;logo de centros escolares</button>
+        </form>
+        <br>
+        <br>
+        <form th:action="@{/materias}">
+            <button class="btn btn-primary">Cat&aacute;logo de usuarios</button>
+        </form>
     </div>
     <div class="col-sm-2"></div>
 </div>
