--- a/src/main/resources/templates/NuevoCatUsuario.html
+++ b/src/main/resources/templates/NuevoCatUsuario.html
@@ -18,28 +18,7 @@
 	<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
   	</button>
-	
-	<div class="collapse navbar-collapse" id="collapsibleNavbar" >
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Expedientes</a>
-			</li>
-			 <li class="nav-item dropdown">
-			     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-			       Catalogos
-			     </a>
-			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="/catalogoCentrosE">Centros Escolares</a>
-			        <a class="dropdown-item" href="/catalogoMateria">Materias</a>
-			        <a class="dropdown-item" href="/catalogoUsuarios">Usuarios del Sistema</a>
-			    </div>
-			  </li>
-			  <li class="nav-item">
-			  	<a class="nav-link" href="#">Iniciar Sesion</a>
-			</li>			  
-		</ul>
-		
-	</div>
+
 </nav>
 
 <div class="container">
@@ -77,7 +56,7 @@
 			</div>
 			<div class="form-group">
 			<label class="label label-default">Fecha de Nacimiento: </label>
-			<input th:field="*{fechaNacimiento}" type="date" data-date-format="DD MMMM YYYY" >
+			<input th:field="*{fechaNacimiento}" type="date" data-date-format="DD MMMM YYYY" value="1990-01-01">
 			<span th:errors="*{fechaNacimiento}" class="text-danger"></span><br>
 			</div>
 			<div class="form-group">
