--- a/src/main/resources/templates/editarExpediente.html
+++ b/src/main/resources/templates/editarExpediente.html
@@ -18,28 +18,7 @@
 	<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
   	</button>
-	
-	<div class="collapse navbar-collapse" id="collapsibleNavbar" >
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Expedientes</a>
-			</li>
-			 <li class="nav-item dropdown">
-			     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-			       Catalogos
-			     </a>
-			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="#">Centros Escolares</a>
-			        <a class="dropdown-item" href="#">Materias</a>
-			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
-			    </div>
-			  </li>
-			  <li class="nav-item">
-			  	<a class="nav-link" href="#">Iniciar Sesion</a>
-			</li>			  
-		</ul>
-		
-	</div>
+
 </nav>
 <div class="container">
 	<div class="row">
@@ -53,27 +32,27 @@
 			    <div>
 			    <label>Nombres:</label>
 			    <input type="text" th:field="*{nombres}" class="form-control">
-			    <span th:errors="*{nombres}" class="invalid-feedback"></span>
+			    <span th:errors="*{nombres}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Apellidos:</label>
 			    <input type="text" th:field="*{apellidos}" class="form-control">
-			    <span th:errors="*{apellidos}" class="invalid-feedback"></span>
+			    <span th:errors="*{apellidos}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Carnet de minoridad:</label>
 			    <input type="text" th:field="*{carnetMinoridad}" class="form-control">
-			    <span th:errors="*{carnetMinoridad}" class="invalid-feedback"></span>
+			    <span th:errors="*{carnetMinoridad}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Fecha de Nacimiento</label>
 			    <input type="text" th:field="*{fechaNacimiento}" class="form-control">
-			    <span th:errors="*{fechaNacimiento}" class="invalid-feedback"></span><br>
+			    <span th:errors="*{fechaNacimiento}" class="text-danger"></span><br>
 			    </div>
 			    <div class="form-group">
 			    <label>Direcci&oacute;n:</label>
 			    <input type="text" th:field="*{direccion}" class="form-control">
-			    <span th:errors="*{direccion}" class="invalid-feedback"></span><br>
+			    <span th:errors="*{direccion}" class="text-danger"></span><br>
 			    </div>
 			    <div class="form-group">
 			    <label>Instituci&oacute;n de procedencia: </label>
@@ -82,27 +61,27 @@
 			                th:value="${item.idInstitucion}"
 			                th:text="${item.nombreInstitucion}">
 			    </select>
-			    <span th:errors="*{centroEscolar}" class="invalid-feedback"></span>
+			    <span th:errors="*{centroEscolar}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Tel&eacute;fono m&oacute;vil: </label>
 			    <input type="text" th:field="*{telMovil}" class="form-control">
-			    <span th:errors="*{telMovil}" class="invalid-feedback"></span>
+			    <span th:errors="*{telMovil}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Tel&eacute;fono Fijo: </label>
 			    <input type="text" th:field="*{telFijo}" class="form-control">
-			    <span th:errors="*{telFijo}" class="invalid-feedback"></span>
+			    <span th:errors="*{telFijo}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Nombre de la madre: </label>
 			    <input type="text" th:field="*{nombreMadre}" class="form-control">
-			    <span th:errors="*{nombreMadre}" class="invalid-feedback"></span>
+			    <span th:errors="*{nombreMadre}" class="text-danger"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Nombre del padre: </label>
 			    <input type="text" th:field="*{nombrePadre}" class="form-control">
-			    <span th:errors="*{nombrePadre}" class="invalid-feedback"></span>
+			    <span th:errors="*{nombrePadre}" class="text-danger"></span>
 			    </div>
 			    <input type="submit" value="Guardar" class="btn btn-primary">
 			</form>
