--- a/src/main/resources/templates/guardarMateria.html
+++ b/src/main/resources/templates/guardarMateria.html
@@ -18,28 +18,7 @@
 	<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
   	</button>
-	
-	<div class="collapse navbar-collapse" id="collapsibleNavbar" >
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Expedientes</a>
-			</li>
-			 <li class="nav-item dropdown">
-			     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-			       Catalogos
-			     </a>
-			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="#">Centros Escolares</a>
-			        <a class="dropdown-item" href="#">Materias</a>
-			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
-			    </div>
-			  </li>
-			  <li class="nav-item">
-			  	<a class="nav-link" href="#">Iniciar Sesion</a>
-			</li>			  
-		</ul>
-		
-	</div>
+
 </nav>
 <div class="container">
 	<div class="row">
@@ -57,19 +36,19 @@
 			                th:value="${p.codigoCatalogo}"
 			                th:text="${p.nomMateria}"></option>
 			    </select>
-			    <span th:errors="*{catalogoMateria}"  class="invalid-feedback"></span>
+			    <span th:errors="*{catalogoMateria}"  class="text-danger"></span>
 				</div>
 				<div class="form-group">
 			    <label>Año:</label><input type="number" th:field="*{year}" class="form-control">
-			    <span th:errors="*{year}" class="invalid-feedback"></span>
+			    <span th:errors="*{year}" class="text-danger"></span>
 				</div>
 				<div class="form-group">
 			    <label>Ciclo:</label><input type="number" th:field="*{cicle}" class="form-control">
-			    <span th:errors="*{cicle}" class="invalid-feedback"></span>
+			    <span th:errors="*{cicle}" class="text-danger"></span>
 				</div>
 				<div class="form-group">
 			    <label>Nota:</label><input type="number" th:field="*{notaMateria}" class="form-control">
-			    <span th:errors="*{notaMateria}"  class="invalid-feedback"></span>
+			    <span th:errors="*{notaMateria}"  class="text-danger"></span>
 				</div>
 			    <input type="submit" value="Save" class="btn btn-primary"/><br>
 			    <input type="hidden" name="codigo" th:value="${alumno.codigoEstudiante}">
