--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -18,28 +18,7 @@
 	<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
   	</button>
-	
-	<div class="collapse navbar-collapse" id="collapsibleNavbar" >
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Expedientes</a>
-			</li>
-			 <li class="nav-item dropdown">
-			     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-			       Catalogos
-			     </a>
-			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="#">Centros Escolares</a>
-			        <a class="dropdown-item" href="#">Materias</a>
-			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
-			    </div>
-			  </li>
-			  <li class="nav-item">
-			  	<a class="nav-link" href="#">Iniciar Sesion</a>
-			</li>			  
-		</ul>
-		
-	</div>
+
 </nav>
 <div class="container">
 	<div class="col-sm-2"></div>
@@ -58,7 +37,7 @@
 		    </div>
 		    <div class="form-group">
 		    <label>Fecha de Nacimiento</label>
-		    <input th:field="*{fechaNacimiento}" type="text" class="form-control">
+				<input th:field="*{fechaNacimiento}" type="date" data-date-format="DD MMMM YYYY" value="1990-01-01">
 		    <span style="color: red" th:errors="*{fechaNacimiento}"></span>
 		    </div>
 		    <div class="form-group">
@@ -95,15 +74,20 @@
 		    <input th:field="*{contrasenia}" type="text" class="form-control">
 		    <span style="color: red" th:errors="*{contrasenia}"></span>
 		    </div>
-		    <div class="form-check">
-				    <label class="form-check-label">Activo:</label><br />
-				    <input type="checkbox" th:field="*{estado}" class="form-check-input"><br>
+			<div class="form-check">
+				<label class="label label-default">Estado: </label>
+				<select th:field="*{estado}">
+					<option th:value="true" th:text="Activo"></option>
+					<option th:value="false" th:text="Inactivo"></option>
+				</select>
+			</div>
+			<label class="form-check-label"> Rol: </label>
+			<div class="form-check">
+				<input type="radio" id="admin" name="authority" value="ADMIN" th:required="required" class="form-check-input"/><label class="label label-default">Administrador</label><br>
 			</div>
 			<div class="form-check">
-				    <label class="form-check-label"> Rol: </label><br />
-				    <input type="radio" id="admin" name="authority" value="ADMIN" th:required="required" class="form-check-input"/>Administrador
-				    <input type="radio" id="coord" name="authority" value="COORD" th:required="required" class="form-check-input" /><br />Coordinador
-		    </div>
+				<input type="radio" id="coord" name="authority" value="COORD" th:required="required" class="form-check-input" /><label class="label label-default">Coordinador</label>
+			</div>
 		    <input type="submit" value="Registrar" class="btn btn-primary">
 		</form>
 	</div>
