--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -37,7 +37,7 @@
 		    </div>
 		    <div class="form-group">
 		    <label>Fecha de Nacimiento</label>
-				<input th:field="*{fechaNacimiento}" type="date" data-date-format="DD MMMM YYYY" value="1990-01-01">
+				<input th:field="*{fechaNacimiento}" type="text" placeholder="dd/mm/aaaa">
 		    <span style="color: red" th:errors="*{fechaNacimiento}"></span>
 		    </div>
 		    <div class="form-group">
